exports[`Storyshots Atoms Gauge 1`] = `
<div
  className="dkrVdg"
  style={
    Object {
      "backgroundColor": "#f1f1f1",
      "minHeight": "400px",
    }
  }>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }>
      <div>
        <div
          className="hRVZub">
          <svg
            className="iUpbvQ"
            height="6em"
            width="6em">
            <circle
              className="iQimGy"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="0em" />
            <circle
              className="cPkxqi"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="-3.141592653589793em" />
            <circle
              className="jGfuEw"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2.9em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="0em" />
          </svg>
          <div
            className="cuIHkJ">
            Vorbereitung
          </div>
          <div
            className="hiboqt">
            15min
          </div>
        </div>
      </div>
    </div>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ?
    </a>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }>
      <a
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "textDecoration": "none",
            "top": 0,
          }
        }>
        ×
      </a>
      <div
        style={undefined}>
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15,
              "fontWeight": 300,
              "lineHeight": 1.45,
            }
          }>
          <div
            style={
              Object {
                "marginBottom": 0,
              }
            }>
            <p
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "
                    -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                    \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                  ",
                  "fontSize": 15,
                }
              }>
              A circular interface element that is supoosed to show
              how much of an hour a preparation step takes.
            </p>
            <p
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "
                    -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                    \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                  ",
                  "fontSize": 15,
                }
              }>
              It is currently limited too displaying parts of one full hour.
            </p>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": 25,
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }>
              Story Source
            </h1>
            <pre
              style={
                Object {
                  "backgroundColor": "#fafafa",
                  "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                  "fontSize": ".88em",
                  "lineHeight": 1.5,
                  "overflowX": "scroll",
                  "padding": ".5rem",
                }
              }>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    <
                    div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    >
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    <
                    Gauge
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}>
                        filledPercent
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}>
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }>
                              0.25
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}>
                        title
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}>
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }>
                            \"
                            Vorbereitung
                            \"
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}>
                        label
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}>
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }>
                            \"
                            15min
                            \"
                          </span>
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    />
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    </
                    div
                    >
                  </span>
                </div>
              </div>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": 25,
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }>
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }>
                \"
                Gauge
                \" Component
              </h2>
              <table
                style={
                  Object {
                    "borderCollapse": "separate",
                    "borderSpacing": "10px 5px",
                    "marginLeft": -10,
                  }
                }>
                <thead>
                  <tr>
                    <th>
                      property
                    </th>
                    <th>
                      propType
                    </th>
                    <th>
                      required
                    </th>
                    <th>
                      default
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      filledPercent
                    </td>
                    <td>
                      number
                    </td>
                    <td>
                      yes
                    </td>
                    <td>
                      -
                    </td>
                  </tr>
                  <tr>
                    <td>
                      height
                    </td>
                    <td>
                      number
                    </td>
                    <td>
                      no
                    </td>
                    <td>
                      -
                    </td>
                  </tr>
                  <tr>
                    <td>
                      label
                    </td>
                    <td>
                      string
                    </td>
                    <td>
                      yes
                    </td>
                    <td>
                      -
                    </td>
                  </tr>
                  <tr>
                    <td>
                      radius
                    </td>
                    <td>
                      number
                    </td>
                    <td>
                      no
                    </td>
                    <td>
                      -
                    </td>
                  </tr>
                  <tr>
                    <td>
                      title
                    </td>
                    <td>
                      string
                    </td>
                    <td>
                      yes
                    </td>
                    <td>
                      -
                    </td>
                  </tr>
                  <tr>
                    <td>
                      width
                    </td>
                    <td>
                      number
                    </td>
                    <td>
                      no
                    </td>
                    <td>
                      -
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms Logo 1`] = `
<div
  className="dkrVdg"
  style={
    Object {
      "backgroundColor": "#3e3e3e",
      "minHeight": "400px",
    }
  }>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }>
      <span
        className="SVGInline gBpODq"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        title="Stove vs. Oven" />
    </div>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ?
    </a>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }>
      <a
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "textDecoration": "none",
            "top": 0,
          }
        }>
        ×
      </a>
      <div
        style={undefined}>
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15,
              "fontWeight": 300,
              "lineHeight": 1.45,
            }
          }>
          <div
            style={
              Object {
                "marginBottom": 0,
              }
            }>
            <p
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "
                    -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                    \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                  ",
                  "fontSize": 15,
                }
              }>
              The Logo 
            </p>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": 25,
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }>
              Story Source
            </h1>
            <pre
              style={
                Object {
                  "backgroundColor": "#fafafa",
                  "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                  "fontSize": ".88em",
                  "lineHeight": 1.5,
                  "overflowX": "scroll",
                  "padding": ".5rem",
                }
              }>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  Logo
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  />
                </span>
              </div>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": 25,
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }>
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }>
                \"
                Logo
                \" Component
              </h2>
              <small>
                No propTypes defined!
              </small>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms Spinner on dark background 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <div
      className="dkrVdg"
      style={
        Object {
          "backgroundColor": "#3e3e3e",
          "minHeight": "400px",
        }
      }>
      <div
        className="jrzfwY" />
    </div>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": 15,
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            This our standard loading spinner on a dark background
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  styled.div
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      style
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }>
                              backgroundColor
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }>
                              \"
                              #3e3e3e
                              \"
                            </span>
                            , 
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }>
                              minHeight
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }>
                              \"
                              400px
                              \"
                            </span>
                            }
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  >
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  styled.div
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  />
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  </
                  styled.div
                  >
                </span>
              </div>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              styled.div
              \" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              styled.div
              \" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms Spinner on light background 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <div
      className="dkrVdg"
      style={
        Object {
          "backgroundColor": "#eee",
          "minHeight": "400px",
        }
      }>
      <div
        className="jrzfwY" />
    </div>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": 15,
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            This our standard loading spinner on a light background
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  styled.div
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      style
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }>
                              backgroundColor
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }>
                              \"
                              #eee
                              \"
                            </span>
                            , 
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }>
                              minHeight
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }>
                              \"
                              400px
                              \"
                            </span>
                            }
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  >
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  styled.div
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  />
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  </
                  styled.div
                  >
                </span>
              </div>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              styled.div
              \" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              styled.div
              \" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules Duration 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#f1f1f1",
      "minHeight": "400px",
    }
  }>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }>
      <section
        className="jhhYTy">
        <div
          className="hRVZub">
          <svg
            className="iUpbvQ"
            height="6em"
            width="6em">
            <circle
              className="iQimGy"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="0em" />
            <circle
              className="cPkxqi"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="-12.566370614359172em" />
            <circle
              className="jGfuEw"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2.9em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="0em" />
          </svg>
          <div
            className="cuIHkJ">
            Vorbereitung
          </div>
          <div
            className="hiboqt">
            1 h, 0 min
          </div>
        </div>
        <div
          className="hRVZub">
          <svg
            className="iUpbvQ"
            height="6em"
            width="6em">
            <circle
              className="iQimGy"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="0em" />
            <circle
              className="cPkxqi"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="-5.585053606381854em" />
            <circle
              className="jGfuEw"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2.9em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="0em" />
          </svg>
          <div
            className="cuIHkJ">
            Backzeit
          </div>
          <div
            className="hiboqt">
            26 min
          </div>
        </div>
        <div
          className="hRVZub">
          <svg
            className="iUpbvQ"
            height="6em"
            width="6em">
            <circle
              className="iQimGy"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="0em" />
            <circle
              className="cPkxqi"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="0em" />
            <circle
              className="jGfuEw"
              cx="3em"
              cy="3em"
              fill="transparent"
              r="2.9em"
              strokeDasharray="12.566370614359172em"
              strokeDashoffset="0em" />
          </svg>
          <div
            className="cuIHkJ">
            Ruhezeit
          </div>
          <div
            className="hiboqt">
            0 min
          </div>
        </div>
      </section>
    </div>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ?
    </a>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }>
      <a
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "textDecoration": "none",
            "top": 0,
          }
        }>
        ×
      </a>
      <div
        style={undefined}>
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15,
              "fontWeight": 300,
              "lineHeight": 1.45,
            }
          }>
          <div
            style={
              Object {
                "marginBottom": 0,
              }
            }>
            <p
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "
                    -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                    \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                  ",
                  "fontSize": 15,
                }
              }>
              A short overview of the duration of different cooking steps.
            </p>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": 25,
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }>
              Story Source
            </h1>
            <pre
              style={
                Object {
                  "backgroundColor": "#fafafa",
                  "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                  "fontSize": ".88em",
                  "lineHeight": 1.5,
                  "overflowX": "scroll",
                  "padding": ".5rem",
                }
              }>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  Duration
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      preparation
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }>
                            3600
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      cooking
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }>
                            1600
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      cooling
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }>
                            0
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  />
                </span>
              </div>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": 25,
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }>
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }>
                \"
                Duration
                \" Component
              </h2>
              <table
                style={
                  Object {
                    "borderCollapse": "separate",
                    "borderSpacing": "10px 5px",
                    "marginLeft": -10,
                  }
                }>
                <thead>
                  <tr>
                    <th>
                      property
                    </th>
                    <th>
                      propType
                    </th>
                    <th>
                      required
                    </th>
                    <th>
                      default
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      cooking
                    </td>
                    <td>
                      number
                    </td>
                    <td>
                      yes
                    </td>
                    <td>
                      -
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cooling
                    </td>
                    <td>
                      number
                    </td>
                    <td>
                      yes
                    </td>
                    <td>
                      -
                    </td>
                  </tr>
                  <tr>
                    <td>
                      preparation
                    </td>
                    <td>
                      number
                    </td>
                    <td>
                      yes
                    </td>
                    <td>
                      -
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms Footer 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <footer
      className="imwRTX">
      © 2016 Stove vs. Oven
    </footer>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": 15,
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            The standard footer
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Footer
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Footer
              \" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms Header 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <header
      className="fyaMue"
      role="banner">
      <span
        className="SVGInline gBpODq"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        title="Stove vs. Oven" />
    </header>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": 15,
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            The Logo 
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Header
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Header
              \" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms Loading Screen 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <section
      className="gfXLih">
      <img
        className="EtQgj"
        sizes="100vw"
        src="https://res.cloudinary.com/svo/image/upload/c_fit/honey_f0uwjn.jpg"
        srcSet="https://res.cloudinary.com/svo/image/upload/c_fit,w_414/honey_f0uwjn.jpg 414w, https://res.cloudinary.com/svo/image/upload/c_fit,w_1024/honey_f0uwjn.jpg 1024w, https://res.cloudinary.com/svo/image/upload/c_fit,w_1280/honey_f0uwjn.jpg 1280w, https://res.cloudinary.com/svo/image/upload/c_fit,w_1366/honey_f0uwjn.jpg 1366w, https://res.cloudinary.com/svo/image/upload/c_fit,w_1920/honey_f0uwjn.jpg 1920w, https://res.cloudinary.com/svo/image/upload/c_fit,w_2500/honey_f0uwjn.jpg 2500w" />
      <div
        className="kVCnDH">
        <div
          className="jrzfwY" />
        <div
          className="inXLde">
          Laden
        </div>
      </div>
    </section>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": 15,
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            A spinner with some Text on a variation of images 
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Loading
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Loading
              \" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sharing clipboard not supported 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <section
      className="iFCZdM">
      <div
        className="cCtRYl">
        <input
          className="bYrSpT"
          onClick={[Function]}
          readOnly={true}
          value="http://svo.dev/hungarian-goulash" />
      </div>
      <div
        className="czWmgu">
        Zum Sharen kannst du die hier abgebildete URL kopieren und auf einer Seite deiner Wahl posten.
      </div>
    </section>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": 15,
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            This is the view of the component if the browser does not support clipboard actions.
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Sharing
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    slug
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        hungarian-goulash
                        \"
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Sharing
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    isClipboardSupported
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }>
                        false
                      </span>
                      }
                    </span>
                  </td>
                </tr>
                <tr>
                  <td>
                    slug
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sharing clipboard supported 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <section
      className="iFCZdM">
      <div
        className="cCtRYl">
        <input
          className="bYrSpT"
          onClick={[Function]}
          readOnly={true}
          value="http://svo.dev/hungarian-goulash" />
        <div
          className="lbawWb"
          onClick={[Function]}>
          <span
            className="SVGInline SVGInline--cleaned hwykRJ"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            title="In die Zwischenablage kopieren" />
        </div>
      </div>
      <div
        className="czWmgu">
        Zum Sharen kannst du die hier abgebildete URL kopieren und auf einer Seite deiner Wahl posten.
         Ein Klick auf den Button kopiert die URL direkt in die Zwischenablage.
      </div>
    </section>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": 15,
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            This is our approach to sharing the url of this recipe wherever the user wants. We use this
            instead of including the usual social media widgets as these are cumbersome to update and
            invade on the users privacy.
          </p>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            We try to explain this to the best of our ability within the component.
          </p>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            This is the view of the component if the browser supports clipboard actions.
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Sharing
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    slug
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        hungarian-goulash
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    isClipboardSupported
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        true
                        \"
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Sharing
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    isClipboardSupported
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }>
                        false
                      </span>
                      }
                    </span>
                  </td>
                </tr>
                <tr>
                  <td>
                    slug
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
